--- a/app.yaml
+++ b/app.yaml
@@ -1,8 +1,10 @@
-application: idelicious
+application: i-del-icio-us
 version: 1
 runtime: python
 api_version: 1
 
 handlers:
+- url: /media
+  static_dir: media
 - url: .*
   script: main.py
